--- a/signaling-reference-app/app/src/main/res/layout/activity_basic_implementation.xml
+++ b/signaling-reference-app/app/src/main/res/layout/activity_basic_implementation.xml
@@ -1,20 +1,29 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="8dp">
+        <Button
+            android:id="@+id/bottom_sheet_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Bottom Sheet"
+            android:layout_centerInParent="true" />
 
-        <include
-            android:id="@+id/base_layout"
-            layout="@layout/base_layout" />
-    </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/bottom_sheet_view"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@android:color/white"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-</ScrollView>
+                <!-- Bottom sheet content -->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="This is the bottom sheet" />
+        </LinearLayout>
+
+</RelativeLayout>
