--- a/signaling-reference-app/app/src/main/res/layout/base_layout.xml
+++ b/signaling-reference-app/app/src/main/res/layout/base_layout.xml
@@ -48,14 +48,39 @@
         android:layout_marginVertical="5dp"
         android:padding="5dp"
         android:background="#FFFFFF"
-        android:hint="@string/channel_name_hint" />
+        android:hint="@string/channel_name_hint"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/userListCaption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/editChannelName"
+        android:text="@string/users_in_the_channel"
+        android:paddingVertical="3dp"
+    />
+
+    <ScrollView
+        android:id="@+id/userScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@id/userListCaption"
+        android:background="@color/white">
+
+        <LinearLayout
+            android:id="@+id/userList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        </LinearLayout>
+    </ScrollView>
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/btnPublish"
-        android:layout_below="@id/editChannelName"
+        android:layout_below="@id/userScrollView"
         android:background="#ECE5DD">
 
         <LinearLayout
@@ -75,7 +100,8 @@
         android:layout_toStartOf="@id/btnPublish"
         android:background="#FFFFFF"
         android:hint="@string/message"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:inputType="text" />
 
     <Button
         android:id="@+id/btnPublish"
