--- a/signaling-reference-app/app/src/main/res/layout/base_layout.xml
+++ b/signaling-reference-app/app/src/main/res/layout/base_layout.xml
@@ -56,24 +56,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/editChannelName"
+        android:textSize="18dp"
         android:text="@string/users_in_the_channel"
         android:paddingVertical="3dp"
     />
 
-    <ScrollView
+    <HorizontalScrollView
         android:id="@+id/userScrollView"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_below="@id/userListCaption"
+        android:scrollbars="none"
         android:background="@color/white">
 
         <LinearLayout
             android:id="@+id/userList"
             android:layout_width="match_parent"
+            android:layout_marginVertical="8dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
         </LinearLayout>
-    </ScrollView>
+    </HorizontalScrollView>
 
     <ScrollView
         android:id="@+id/scrollView"
