--- a/signaling-reference-app/app/src/main/res/layout/user_icon_layout.xml
+++ b/signaling-reference-app/app/src/main/res/layout/user_icon_layout.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/userIcon"
-    android:layout_width="wrap_content"
-    android:layout_height="40dp"
-    android:textSize="14sp"
-    android:background="@color/agora_blue"
-    android:layout_marginHorizontal="5dp"
+    android:layout_width="64dp"
+    android:layout_height="32dp"
+    android:textSize="24sp"
+    android:background="@color/user_icon"
+    android:layout_marginHorizontal="8dp"
+    android:paddingEnd="8dp"
+    android:text="1"
     android:gravity="center_vertical"
     app:drawableStartCompat="@drawable/user">
 </TextView>
