--- a/signaling-reference-app/app/src/main/res/layout/base_layout.xml
+++ b/signaling-reference-app/app/src/main/res/layout/base_layout.xml
@@ -56,8 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/editChannelName"
-        android:textSize="18dp"
-        android:text="@string/users_in_the_channel"
+        android:textSize="18sp"
+        android:text="@string/presence"
         android:paddingVertical="3dp"
     />
 
@@ -71,9 +71,9 @@
 
         <LinearLayout
             android:id="@+id/userList"
-            android:layout_width="match_parent"
-            android:layout_marginVertical="8dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
             android:orientation="horizontal">
         </LinearLayout>
     </HorizontalScrollView>
@@ -109,10 +109,10 @@
     <Button
         android:id="@+id/btnPublish"
         android:layout_width="50dp"
-        android:layout_margin="5dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
         android:onClick="publishMessage"
         android:text="@string/send" />
 
