--- a/signaling-reference-app/app/src/main/res/layout/base_layout.xml
+++ b/signaling-reference-app/app/src/main/res/layout/base_layout.xml
@@ -25,7 +25,8 @@
         android:padding="5dp"
         android:background="#FFFFFF"
         android:hint="@string/uid_hint"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:enabled="false"/>
 
     <Button
         android:id="@+id/btnSubscribe"
