--- a/signaling-reference-app/app/src/main/res/layout/activity_basic_implementation.xml
+++ b/signaling-reference-app/app/src/main/res/layout/activity_basic_implementation.xml
@@ -5,25 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-        <Button
-            android:id="@+id/bottom_sheet_button"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/panel"
+            layout="@layout/login_subscribe"
             android:layout_height="wrap_content"
-            android:text="Show Bottom Sheet"
-            android:layout_centerInParent="true" />
+            android:layout_width="match_parent"/>
 
-        <LinearLayout
-            android:id="@+id/bottom_sheet_view"
+        <include
+            android:id="@+id/base_layout"
+            layout="@layout/base_layout"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@android:color/white"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
-                <!-- Bottom sheet content -->
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="This is the bottom sheet" />
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_below="@id/panel"/>
 
 </RelativeLayout>
