--- a/signaling-reference-app/app/src/main/res/layout/activity_stream_channel.xml
+++ b/signaling-reference-app/app/src/main/res/layout/activity_stream_channel.xml
@@ -1,46 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AuthenticationActivity">
+    tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <include
+        android:id="@+id/panel"
+        layout="@layout/login_subscribe"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="8dp">
+        android:layout_width="match_parent"/>
 
-        <include
-            android:id="@+id/base_layout"
-            layout="@layout/base_layout" />
+    <include
+        android:id="@+id/base_layout"
+        layout="@layout/base_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/panel"/>
 
-        <EditText
-            android:id="@+id/editServerUrl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/base_layout"
-            android:hint="@string/authentication_server_hint"
-            android:inputType="textUri"
-            android:text="" />
-
-        <EditText
-            android:id="@+id/editChannelName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/editServerUrl"
-            android:hint="@string/channel_name_hint"
-            android:inputType="text"
-            android:text="" />
-        <EditText
-            android:id="@+id/editTopicName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/editChannelName"
-            android:hint="@string/topic_name_hint"
-            android:inputType="text"
-            android:text="" />
-    </RelativeLayout>
-
-</ScrollView>
+</RelativeLayout>
