--- a/signaling-reference-app/app/src/main/res/layout/activity_basic_implementation.xml
+++ b/signaling-reference-app/app/src/main/res/layout/activity_basic_implementation.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="6dp"
+    android:paddingHorizontal="12dp"
+    android:paddingVertical="6dp"
     android:background="#ECE5DD"
     tools:context=".BasicImplementationActivity">
 
