--- a/signaling-reference-app/app/src/main/res/layout/activity_stream_channel.xml
+++ b/signaling-reference-app/app/src/main/res/layout/activity_stream_channel.xml
@@ -13,44 +13,36 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
 
-    <LinearLayout
-        android:id="@+id/topic"
+    <Button
+        android:id="@+id/btnTopic"
+        android:layout_width="170dp"
+        android:layout_below="@id/panel"
+        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content"
+        android:onClick="joinLeaveTopic"
+        android:layout_marginHorizontal="5dp"
+        android:enabled="false"
+        android:text="@string/join_topic"/>
+
+    <EditText
+        android:id="@+id/editTopicName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/panel"
-        android:background="#ECE5DD">
-
-        <EditText
-            android:id="@+id/editTopicName"
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:layout_height="wrap_content"
-            android:padding="7dp"
-            android:layout_marginTop="2dp"
-            android:background="#FFFFFF"
-            android:hint="@string/enter_topic_name"
-            android:autofillHints=""
-            android:inputType="number"
-            android:enabled="false"/>
-
-        <Button
-            android:id="@+id/btnTopic"
-            android:layout_width="0dp"
-            android:layout_weight="5"
-            android:layout_height="wrap_content"
-            android:onClick="joinLeaveTopic"
-            android:layout_marginStart="5dp"
-            android:enabled="false"
-            android:text="@string/join_topic"/>
-
-    </LinearLayout>
+        android:padding="5dp"
+        android:layout_alignTop="@id/btnTopic"
+        android:layout_alignBottom="@id/btnTopic"
+        android:layout_toStartOf="@id/btnTopic"
+        android:background="#FFFFFF"
+        android:hint="@string/enter_topic_name"
+        android:layout_marginVertical="5dp"
+        android:autofillHints=""
+        android:inputType="text"/>
 
     <include
         android:id="@+id/base_layout"
         layout="@layout/base_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/topic"/>
+        android:layout_below="@id/btnTopic"/>
 
 </RelativeLayout>
