--- a/signaling-reference-app/app/src/main/res/layout/base_layout.xml
+++ b/signaling-reference-app/app/src/main/res/layout/base_layout.xml
@@ -66,7 +66,7 @@
             android:id="@+id/btnPublish"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:onClick="publishMessage"
+            android:onClick="btnSendClick"
             android:layout_marginStart="6dp"
             android:text="@string/send" />
 
