--- a/signaling-reference-app/app/src/main/res/layout/login_subscribe.xml
+++ b/signaling-reference-app/app/src/main/res/layout/login_subscribe.xml
@@ -1,66 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#ECE5DD"
     android:orientation="vertical">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginHorizontal="5dp"
+        android:onClick="loginLogout"
+        android:text="@string/login" />
+
+    <EditText
+        android:id="@+id/editUid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#ECE5DD">
+        android:layout_alignBottom="@id/btnLogin"
+        android:layout_alignTop="@id/btnLogin"
+        android:layout_toStartOf="@id/btnLogin"
+        android:layout_marginVertical="5dp"
+        android:padding="5dp"
+        android:background="#FFFFFF"
+        android:hint="@string/uid_hint"
+        android:inputType="number"
+        android:enabled="false"/>
 
-        <EditText
-            android:id="@+id/editUid"
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:layout_height="wrap_content"
-            android:padding="7dp"
-            android:layout_marginTop="2dp"
-            android:background="#FFFFFF"
-            android:hint="@string/uid_hint"
-            android:inputType="number"
-            android:enabled="false"/>
+    <Button
+        android:id="@+id/btnSubscribe"
+        android:layout_width="170dp"
+        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnLogin"
+        android:onClick="subscribeUnsubscribe"
+        android:layout_marginHorizontal="5dp"
+        android:text="@string/subscribe" />
 
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="0dp"
-            android:layout_weight="5"
-            android:layout_height="wrap_content"
-            android:onClick="loginLogout"
-            android:layout_marginStart="5dp"
-            android:text="@string/login"/>
-
-    </LinearLayout>
-
-    <LinearLayout
+    <EditText
+        android:id="@+id/editChannelName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#ECE5DD">
+        android:layout_alignBottom="@id/btnSubscribe"
+        android:layout_alignTop="@id/btnSubscribe"
+        android:layout_alignStart="@id/editUid"
+        android:layout_alignEnd="@id/editUid"
+        android:layout_marginVertical="5dp"
+        android:padding="5dp"
+        android:background="#FFFFFF"
+        android:hint="@string/channel_name_hint"
+        android:inputType="text" />
 
-        <EditText
-            android:id="@+id/editChannelName"
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:padding="7dp"
-            android:layout_marginTop="2dp"
-            android:background="#FFFFFF"
-            android:hint="@string/channel_name_hint"
-            android:inputType="text" />
-
-        <Button
-            android:id="@+id/btnSubscribe"
-            android:layout_width="0dp"
-            android:layout_weight="5"
-            android:layout_height="wrap_content"
-            android:onClick="subscribeUnsubscribe"
-            android:layout_marginStart="5dp"
-            android:text="@string/subscribe" />
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
