--- a/signaling-reference-app/app/src/main/res/layout/activity_stream_channel.xml
+++ b/signaling-reference-app/app/src/main/res/layout/activity_stream_channel.xml
@@ -33,6 +33,7 @@
         android:layout_alignBottom="@id/btnTopic"
         android:layout_toStartOf="@id/btnTopic"
         android:background="#FFFFFF"
+        android:text="myTopicName"
         android:hint="@string/enter_topic_name"
         android:layout_marginVertical="5dp"
         android:autofillHints=""
